--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hackaton",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://final-test.ayambakarbufajar.com/",
   "dependencies": {
     "@react-google-maps/api": "^2.12.0",
     "@testing-library/jest-dom": "^5.16.4",
