--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.2.0
       with:
         server: ftp.ayambakarbufajar.com
-        username: fajar
+        username: u527245759
         password: Sidikpajar2
         local-dir:  build/
-        server-dir: final-test/
+        server-dir: /public_html/final-test.ayambakarbufajar.com/
